Added certs to dockerfile.

--- a/templates/react-go/server/Dockerfile
+++ b/templates/react-go/server/Dockerfile
@@ -7,5 +7,7 @@ FROM scratch
 WORKDIR /out
 COPY --from=builder /app/server /out/server
 COPY --from=builder /app/public/ /out/public/
+# In case the app calls out to external services
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 EXPOSE 8080
 ENTRYPOINT ["/out/server"]
