--- a/templates/react-openai/Makefile
+++ b/templates/react-openai/Makefile
@@ -28,9 +28,9 @@ init-git:
 frontend-install:
 	@echo "frontend install..."
 	npm create vite@latest frontend -- --template react-ts
-	cd frontend && npm install && npm install axios && npm install -D tailwindcss postcss autoprefixer && npx tailwindcss init -p \
-	npm i react-router-dom && npm i @headlessui/react && npm i @heroicons/react && npm i tailwindcss/forms \
-	npm i flowbite-react && npm i react-markdown && npm i remark-gfm
+	cd frontend && npm install && npm install axios && npm install -D tailwindcss postcss autoprefixer && npx tailwindcss init -p
+	cd frontend && npm i react-router-dom && npm i @headlessui/react && npm i @heroicons/react && npm i tailwindcss/forms
+	cd frontend && npm i flowbite-react && npm i react-markdown && npm i remark-gfm
 
 server-install:
 	@echo ""
